ingress/jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: demoapp  # Or the namespace where Jenkins is deployed
  annotations:
    spec.ingressClassName: "kong"  # If using Kong
    # Add other Kong-specific annotations if necessary
spec:
  rules:
    - host: jenkins.local  # Changed to jenkins.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 8080
